test/files/neg/t6455.check
t6455.scala:5: error: value withFilter is not a member of object O
  O.withFilter(f => true)
    ^
one error found
